[metadata]
name = mpwt
version = attr: mpwt.__version__
description = Multiprocessing for Pathway-Tools
long_description = file: README.rst
author = Arnaud Belcour
author_email = arnaud.belcour@gmail.com
url = https://github.com/AuReMe/mpwt
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        Intended Audience :: Developers
        Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = mpwt
install_requires =
    biopython==1.73
    docopt==0.6.2

[options.entry_points]
console_scripts =
    mpwt = mpwt.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = mpwt/__init__.py